tests/unit_tests/sema/binder_typealias_conflict_01.cc
// RUN: %cxx -verify -fcheck %s

typedef int Value;
typedef float Value;  // expected-error {{conflicting declaration of 'Value'}}
